F0h: 청년센터 3-column 재설계 + 실좌표 CSV 시드 + 확장성 원칙 강화 (#78)
* 260707_F0h_centers_rework - 청년센터 3-column 아키텍처 재구현

- 기존 2-column + 별도 라우트(/centers/{id}) 구조를 prototype 3-column [리스트 + 인라인 상세 + 지도]로 재작업
- Center 엔티티에 description/operatingHours/imageUrl 3필드 추가 + 대표 8개 시드 (c1)
- CenterController: /centers · /centers/{detailId} 단일 뷰로 통합, detailCenter 모델 (c2)
- CenterService: RegionRepository/ProgramRepository 주입, sort=programs 지원 (c2)
- ProgramRepository: countActiveGroupByOrganization JPQL 추가 (c2)
- list.html: 3-column 전면 재구성 — 커스텀 지역 드롭다운, 정렬 pill, 토글 스위치, Full/Compact 카드, 인라인 상세 패널, floating 검색 버튼, grid fallback
- detail.html 삭제 (list 통합)
- main.css: centers-* 계열 ~500라인 재작성
- center-map.js: 커스텀 오버레이 마커(pill 확장), 인포윈도우, dirty flag, bounds 필터, 드롭다운·pill·토글 인터랙션 (c4)
- CenterControllerTest / JpaMappingTest 재작성

정적 검증: JpaMappingTest 3/3 · CenterControllerTest 4/4 PASS
동적 검증: /centers 200 · /centers/1 200 · 3-column 마크업 실측 (centers-layout > list-panel + map-panel, detail-panel 인라인)

Co-Authored-By: Claude <noreply@anthropic.com>

* 260707_F0h_gap_fix - prototype 갭 3종 반영

- Center 주소 시드 추가: 모든 센터에 "경기도 {region}" fallback + 대표 8개 실주소 override
  (기존: 리스트 카드·상세 패널의 주소 자리가 빈 span 으로 렌더되던 문제)
- 상세 패널 "진행중인 프로그램 N건" 강조 카드 추가 (프로토타입 상세 필수 요소)
- 상세 이미지 좌하단에 운영중 badge 오버레이 이동 + 하단 gradient overlay 추가
- CenterService.programCountFor(name), CenterController detailProgramCount 모델 전달

정적 검증: JpaMappingTest 3/3 · CenterControllerTest 4/4 PASS
동적 검증: /centers 리스트·/centers/5 상세에서 실주소·programs 카드·image badge 실측 확인

Co-Authored-By: Claude <noreply@anthropic.com>

* 260707_F0h_full_coverage - 청년센터 48개 전체 데이터 반영

- 좌표: 30개 시·군 시청 인근 좌표 매핑 + 같은 시·군 여러 센터는 소수5자리 offset
  (기존: 대표 8개만 좌표 → 지도 마커 8개. 현재: 48개 전체 마커)
- desc: 이름 키워드 기반 5종 템플릿 자동 생성 (창업/취업/역량/문화/기본)
  대표 8개는 실 기획 문안 override
- imageUrl: unsplash 워크스페이스 사진 6장 로테이션 (nothing/placeholder 대신)
- 첫 카드 클릭 시 placeholder 만 보이던 UX 문제 해소 (id=1 "내일꿈제작소" 도 이제 컨텐츠 표시)

정적 검증: JpaMappingTest 3/3 · CenterControllerTest 4/4 PASS
동적 검증: /centers 48개 카드 · 좌표 48